--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Binaural Beat Generator</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
+    <link rel="icon" href="brain1.png" type="image/png">
+    <link rel="shortcut icon" href="brain1.png" type="image/png">
 </head>
 <body>
 
