--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Frequency Difference Display -->
     <div id="frequency-difference-container">
-        <p style="color: white; font-size: 5rem;" id="frequency-difference">0 Hz</p>
+        <p style="margin-top: -4vh; color: white; font-size: 5rem;" id="frequency-difference">0 Hz</p>
     </div>
 
     <!-- Flex container for side-by-side input fields -->
