--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- File upload input -->
     <div class="input-group">
         <label class="error" for="audio-file">Loop Audio File:</label>
-        <input style="width: 40vw; color: white;" type="file" id="audio-file" accept="audio/*">
+        <input style="min-width: 40vw; color: white;" type="file" id="audio-file" accept="audio/*">
     </div>
 
     <!-- Control Buttons -->
