--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="binuralbeats.html"><img class="brain" src="brain.png" alt="Brain Logo"></a>
     </div>
     <h1>Binaural Beat Generator</h1>
-    <small style="color: rgb(48, 48, 48); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; margin-top: -10px;">BinauralBeatGenerator.com</small>
+    <small style="margin-top: -2vh; color: rgb(48, 48, 48); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; margin-top: -10px;">BinauralBeatGenerator.com</small>
 
     <!-- Frequency Difference Display -->
     <div id="frequency-difference-container">
