--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- File upload input -->
     <div class="input-group">
-        <label class="error" for="audio-file">♻️ Loop Your MP3:</label>
+        <label class="error" for="audio-file">Loop Your MP3 ♻️:</label>
         <input style="min-width: 40vw; color: white;" type="file" id="audio-file" accept="audio/*">
     </div>
 
