--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <div class="container">
         <button id="play-button" onclick="playBinauralBeats()">Play</button>
         <button id="stop-button" onclick="stopBinauralBeats()" style="display:none;">Stop</button>
-    <!-- Information 
-    <p style="color: black;" id="info"></p> -->
+    <!-- Information  -->
+    <p style="color: black;" id="info"></p>
     <a style="text-decoration: none; color: #00d9b2;" href="binuralbeats.html"><p>💡</p></a>
     </div>
 
