--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <button id="stop-button" onclick="stopBinauralBeats()" style="display:none;">Stop</button>
     <!-- Information  -->
     <p style="color: black;" id="info"></p>
-    <a style="text-decoration: none; color: #00d9b2;" href="binuralbeats.html"><p>Blueprint</p></a>
+    <a style="text-decoration: none; color: #00d9b2;" href="binuralbeats.html"><p>Guide</p></a>
     </div>
 
     <script src="script.js"></script> <!-- Link to the JS file -->
