--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
     <div class="container">
         <button id="play-button" onclick="playBinauralBeats()">Play</button>
         <button id="stop-button" onclick="stopBinauralBeats()" style="display:none;">Stop</button>
+
+         <!-- Share Button -->
+        <div>
+            <img class="share-button" src="share.png" alt="">
+         </div>
+
     <!-- Information  -->
     <p style="color: black;" id="info"></p>
     <a style="text-decoration: none; color: #00d9b2;" href="binuralbeats.html"><p>Guide</p></a>
