--- a/index.html
+++ b/index.html
@@ -35,11 +35,32 @@
     </div>
 
     <!-- File upload input -->
-    <div class="input-group">
-        <label class="error" for="audio-file">Loop Your MP3 ♻️:</label>
-        <input style="min-width: 20vw; color: white;" type="file" id="audio-file" accept="audio/*">
-    </div>
 
+    <div class="input-group" style="text-align: center; margin: 20px 0;">
+        <label for="audio-file" style="font-size: 18px; color: white; margin-bottom: 10px; display: block; font-weight: bold; text-transform: uppercase;">
+            Loop Your MP3 ♻️:
+        </label>
+        <input type="file" id="audio-file" accept="audio/*" onchange="updateLabel()" 
+               style="opacity: 0; position: absolute; width: 1px; height: 1px;">
+        <button onclick="document.getElementById('audio-file').click()" 
+                style="background-color: #00d9b2; color: white; border: none; padding: 12px 20px; font-size: 16px; font-weight: bold; border-radius: 25px; cursor: pointer; text-align: center; display: inline-block; transition: background-color 0.3s ease, transform 0.2s ease;">
+            Choose MP3 File
+        </button>
+    </div>
+    
+    <script>
+        // Update label text when file is selected
+        function updateLabel() {
+            const fileInput = document.getElementById('audio-file');
+            const label = document.querySelector('label[for="audio-file"]');
+            if (fileInput.files.length > 0) {
+                label.textContent = `File Selected: ${fileInput.files[0].name}`;
+            } else {
+                label.textContent = 'Loop Your MP3 ♻️:';
+            }
+        }
+    </script>
+    
     <!-- Control Buttons -->
     <div class="container">
         <button id="play-button" onclick="playBinauralBeats()">Play</button>
