--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
             Loop Your Own MP3 File (optional)
         </button>
     </div>
-    
+
+        
+    <!-- This container will hold the vibrate button if the user is on a mobile device -->
+    <div id="vibrate-button-container"></div>
 
     <!-- Control Buttons -->
     <div class="container">
