--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
 <!-- Mixer controls container -->
  <!-- Image to trigger the div (now with id 'mixer-image') -->
 <img style="height: 5vh; margin-top: 0vh; margin-bottom: 1vh;" src="sound-controller.png" id="mixer-image" alt="Click to open volume controls" style="cursor: pointer;">
-
+<small style="margin-top: -2vh; color: rgba(0, 0, 0, 0.334); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; margin-top: -10px;">MIXER</small>
 
 <div class="mixer-container" style="display: none;">
-    <small>click again to close</small>
-    <h3>Mixer</h3>
+    <small style="margin-bottom: 4vh; color: rgb(74, 56, 59);">click again to close</small>
     <div class="volume-controls">
-            Match Left and Right Volumes
+        <ul style="padding: 0; margin-top: 2vh; margin: 0;">Match Left and Right Volumes</ul>
         <label>
             <input type="checkbox" id="link-volumes">
         </label>
