--- a/index.html
+++ b/index.html
@@ -45,12 +45,10 @@
         </div>
     </div>
     
-<!--
-        <div class="loop-volume">
+        <div style="z-index: -888;" class="loop-volume">
         <label for="loop-volume">Looped Audio Volume:</label>
         <input type="range" id="loop-volume" min="0" max="1" step="0.01" value="0.3">
     </div>
-    -->
         
     <div class="reset-button">
         <button id="reset-button">Reset to Default</button>
