--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     
-        <div style="z-index: -888;" class="loop-volume">
+        <div class="loop-volume">
         <label for="loop-volume">Looped Audio Volume:</label>
         <input type="range" id="loop-volume" min="0" max="1" step="0.01" value="0.3">
     </div>
